k8s/service.yml
apiVersion: v1
kind: Service 
metadata: 
  name: chatbot-service 
spec: 
  type: ClusterIP 
  selector:
    app: chatbot 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
